# dwavetask

./: CMakeLists.txt  README.md
part1/: CMakeLists.txt
part1/include/: hash_table.h
part1/src/: main.cpp
part2/: CMakeLists.txt
part2/include/: json_parser.h  json_parser_simd.h  record.h
part2/src/: json_parser.cpp  json_parser_simd.cpp  main.cpp
